Various minor fixes / improvements: - categories & textMatch pages add correct / incorrect classes to labels that can be used by themes - tweak appearance of disabled gap fill page drop down menus - highlight text page - ensure feedback title editor field is always shown - model answer results - tweak xwd labels - highlight text page - fix bug where notes weren't always saved correctly for use on model answer results page - title / orientation / summary pages - trim strings used for media to prevent errors - add alternative string for page resources button if only one resource available ('resource' instead of 'resources')

--- a/modules/xerte/parent_templates/Nottingham/models_html5/gapFill.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/gapFill.css
@@ -213,6 +213,10 @@
 	padding:initial !important;
 }
 
+#targetHolder select[disabled] {
+	appearance: none;
+}
+
 /*gap fill: remove red crosses when show answers selected*/
 #targetHolder .target.answerShown+span:before, #targetHolder select[disabled].answerShown+span:before, #targetHolder input.answerShown+span:before {
 	content:"";
